Query relevant team stats from PostgreSQL database and merge with historical playoff game results (to prep for model building).

--- a/code/ml_model.ipynb
+++ b/code/ml_model.ipynb
@@ -2,8 +2,422 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "506b9675-e367-4450-acab-46d61037342d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import sklearn as sk\n",
+    "from sklearn.linear_model import LogisticRegressionCV\n",
+    "from database import engine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0d00d4cd-813e-4de2-81b6-3b7798ae3bea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"\"\"\n",
+    "select\n",
+    "    team_season, srs, ortg, drtg, true_shooting_percentage, average_age, margin_of_victory\n",
+    "from\n",
+    "    stats\n",
+    "where\n",
+    "    season in ('2011','2012','2013','2014','2015','2016','2017','2018','2019','2021','2022');\n",
+    "    \"\"\"\n",
+    "\n",
+    "team_stats = pd.read_sql_query(query, engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "40768e9a-3435-4278-93cb-f8ebe4d8b18b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_abbreviations = pd.read_csv(os.path.join(\"..\", \"data\", \"clean\", \"team_abbreviations.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5cb042e4-d024-41f0-88e3-ddab680fa918",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "game_results = pd.read_csv(os.path.join(\"..\", \"data\", \"clean\", \"game_results.csv\"))\n",
+    "game_results = game_results.assign(home_win=lambda x: x.home_score > x.away_score)\n",
+    "game_results = game_results.loc[(game_results['year'] > 2010) & (game_results['year'] != 2020)] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5f0d2077-444f-408b-be32-4de2837bc4e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_abbreviations = team_abbreviations.set_index([\"Team\"])\n",
+    "game_results = game_results.set_index([\"home_team\"])\n",
+    "game_results = game_results.assign(home_abbreviation = team_abbreviations[\"Abbreviation\"])\n",
+    "\n",
+    "game_results = game_results.reset_index()\n",
+    "game_results = game_results.set_index([\"away_team\"])\n",
+    "game_results = game_results.assign(away_abbreviation = team_abbreviations[\"Abbreviation\"])\n",
+    "game_results = game_results.reset_index()\n",
+    "\n",
+    "game_results['home_teamID'] = game_results['home_abbreviation'] + \"-\" + game_results[\"year\"].astype(str)\n",
+    "game_results['away_teamID'] = game_results['away_abbreviation'] + \"-\" + game_results[\"year\"].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "474d4336-ffe8-420a-a7b7-abd5a0f9830a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>away_teamID</th>\n",
+       "      <th>home_teamID</th>\n",
+       "      <th>home_win</th>\n",
+       "      <th>home_srs</th>\n",
+       "      <th>home_ortg</th>\n",
+       "      <th>home_drtg</th>\n",
+       "      <th>home_true_shooting_percentage</th>\n",
+       "      <th>home_margin_of_victory</th>\n",
+       "      <th>away_srs</th>\n",
+       "      <th>away_ortg</th>\n",
+       "      <th>away_drtg</th>\n",
+       "      <th>away_true_shooting_percentage</th>\n",
+       "      <th>away_margin_of_victory</th>\n",
+       "      <th>avg_age_diff</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MIL-2021</td>\n",
+       "      <td>PHX-2021</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5.67</td>\n",
+       "      <td>117.2</td>\n",
+       "      <td>111.3</td>\n",
+       "      <td>0.597</td>\n",
+       "      <td>5.82</td>\n",
+       "      <td>5.57</td>\n",
+       "      <td>117.2</td>\n",
+       "      <td>111.4</td>\n",
+       "      <td>0.593</td>\n",
+       "      <td>5.89</td>\n",
+       "      <td>-1.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MIL-2021</td>\n",
+       "      <td>PHX-2021</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5.67</td>\n",
+       "      <td>117.2</td>\n",
+       "      <td>111.3</td>\n",
+       "      <td>0.597</td>\n",
+       "      <td>5.82</td>\n",
+       "      <td>5.57</td>\n",
+       "      <td>117.2</td>\n",
+       "      <td>111.4</td>\n",
+       "      <td>0.593</td>\n",
+       "      <td>5.89</td>\n",
+       "      <td>-1.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>PHX-2021</td>\n",
+       "      <td>MIL-2021</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5.57</td>\n",
+       "      <td>117.2</td>\n",
+       "      <td>111.4</td>\n",
+       "      <td>0.593</td>\n",
+       "      <td>5.89</td>\n",
+       "      <td>5.67</td>\n",
+       "      <td>117.2</td>\n",
+       "      <td>111.3</td>\n",
+       "      <td>0.597</td>\n",
+       "      <td>5.82</td>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PHX-2021</td>\n",
+       "      <td>MIL-2021</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5.57</td>\n",
+       "      <td>117.2</td>\n",
+       "      <td>111.4</td>\n",
+       "      <td>0.593</td>\n",
+       "      <td>5.89</td>\n",
+       "      <td>5.67</td>\n",
+       "      <td>117.2</td>\n",
+       "      <td>111.3</td>\n",
+       "      <td>0.597</td>\n",
+       "      <td>5.82</td>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>MIL-2021</td>\n",
+       "      <td>PHX-2021</td>\n",
+       "      <td>True</td>\n",
+       "      <td>5.67</td>\n",
+       "      <td>117.2</td>\n",
+       "      <td>111.3</td>\n",
+       "      <td>0.597</td>\n",
+       "      <td>5.82</td>\n",
+       "      <td>5.57</td>\n",
+       "      <td>117.2</td>\n",
+       "      <td>111.4</td>\n",
+       "      <td>0.593</td>\n",
+       "      <td>5.89</td>\n",
+       "      <td>-1.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>829</th>\n",
+       "      <td>DEN-2011</td>\n",
+       "      <td>OKC-2011</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3.81</td>\n",
+       "      <td>111.2</td>\n",
+       "      <td>107.2</td>\n",
+       "      <td>0.561</td>\n",
+       "      <td>3.79</td>\n",
+       "      <td>4.81</td>\n",
+       "      <td>112.3</td>\n",
+       "      <td>107.3</td>\n",
+       "      <td>0.574</td>\n",
+       "      <td>4.76</td>\n",
+       "      <td>-3.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>830</th>\n",
+       "      <td>DEN-2011</td>\n",
+       "      <td>OKC-2011</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3.81</td>\n",
+       "      <td>111.2</td>\n",
+       "      <td>107.2</td>\n",
+       "      <td>0.561</td>\n",
+       "      <td>3.79</td>\n",
+       "      <td>4.81</td>\n",
+       "      <td>112.3</td>\n",
+       "      <td>107.3</td>\n",
+       "      <td>0.574</td>\n",
+       "      <td>4.76</td>\n",
+       "      <td>-3.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>831</th>\n",
+       "      <td>OKC-2011</td>\n",
+       "      <td>DEN-2011</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4.81</td>\n",
+       "      <td>112.3</td>\n",
+       "      <td>107.3</td>\n",
+       "      <td>0.574</td>\n",
+       "      <td>4.76</td>\n",
+       "      <td>3.81</td>\n",
+       "      <td>111.2</td>\n",
+       "      <td>107.2</td>\n",
+       "      <td>0.561</td>\n",
+       "      <td>3.79</td>\n",
+       "      <td>3.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>832</th>\n",
+       "      <td>OKC-2011</td>\n",
+       "      <td>DEN-2011</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4.81</td>\n",
+       "      <td>112.3</td>\n",
+       "      <td>107.3</td>\n",
+       "      <td>0.574</td>\n",
+       "      <td>4.76</td>\n",
+       "      <td>3.81</td>\n",
+       "      <td>111.2</td>\n",
+       "      <td>107.2</td>\n",
+       "      <td>0.561</td>\n",
+       "      <td>3.79</td>\n",
+       "      <td>3.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>833</th>\n",
+       "      <td>DEN-2011</td>\n",
+       "      <td>OKC-2011</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3.81</td>\n",
+       "      <td>111.2</td>\n",
+       "      <td>107.2</td>\n",
+       "      <td>0.561</td>\n",
+       "      <td>3.79</td>\n",
+       "      <td>4.81</td>\n",
+       "      <td>112.3</td>\n",
+       "      <td>107.3</td>\n",
+       "      <td>0.574</td>\n",
+       "      <td>4.76</td>\n",
+       "      <td>-3.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>834 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    away_teamID home_teamID  home_win  home_srs  home_ortg  home_drtg  \\\n",
+       "0      MIL-2021    PHX-2021     False      5.67      117.2      111.3   \n",
+       "1      MIL-2021    PHX-2021     False      5.67      117.2      111.3   \n",
+       "2      PHX-2021    MIL-2021     False      5.57      117.2      111.4   \n",
+       "3      PHX-2021    MIL-2021     False      5.57      117.2      111.4   \n",
+       "4      MIL-2021    PHX-2021      True      5.67      117.2      111.3   \n",
+       "..          ...         ...       ...       ...        ...        ...   \n",
+       "829    DEN-2011    OKC-2011      True      3.81      111.2      107.2   \n",
+       "830    DEN-2011    OKC-2011      True      3.81      111.2      107.2   \n",
+       "831    OKC-2011    DEN-2011     False      4.81      112.3      107.3   \n",
+       "832    OKC-2011    DEN-2011      True      4.81      112.3      107.3   \n",
+       "833    DEN-2011    OKC-2011      True      3.81      111.2      107.2   \n",
+       "\n",
+       "     home_true_shooting_percentage  home_margin_of_victory  away_srs  \\\n",
+       "0                            0.597                    5.82      5.57   \n",
+       "1                            0.597                    5.82      5.57   \n",
+       "2                            0.593                    5.89      5.67   \n",
+       "3                            0.593                    5.89      5.67   \n",
+       "4                            0.597                    5.82      5.57   \n",
+       "..                             ...                     ...       ...   \n",
+       "829                          0.561                    3.79      4.81   \n",
+       "830                          0.561                    3.79      4.81   \n",
+       "831                          0.574                    4.76      3.81   \n",
+       "832                          0.574                    4.76      3.81   \n",
+       "833                          0.561                    3.79      4.81   \n",
+       "\n",
+       "     away_ortg  away_drtg  away_true_shooting_percentage  \\\n",
+       "0        117.2      111.4                          0.593   \n",
+       "1        117.2      111.4                          0.593   \n",
+       "2        117.2      111.3                          0.597   \n",
+       "3        117.2      111.3                          0.597   \n",
+       "4        117.2      111.4                          0.593   \n",
+       "..         ...        ...                            ...   \n",
+       "829      112.3      107.3                          0.574   \n",
+       "830      112.3      107.3                          0.574   \n",
+       "831      111.2      107.2                          0.561   \n",
+       "832      111.2      107.2                          0.561   \n",
+       "833      112.3      107.3                          0.574   \n",
+       "\n",
+       "     away_margin_of_victory  avg_age_diff  \n",
+       "0                      5.89          -1.5  \n",
+       "1                      5.89          -1.5  \n",
+       "2                      5.82           1.5  \n",
+       "3                      5.82           1.5  \n",
+       "4                      5.89          -1.5  \n",
+       "..                      ...           ...  \n",
+       "829                    4.76          -3.6  \n",
+       "830                    4.76          -3.6  \n",
+       "831                    3.79           3.6  \n",
+       "832                    3.79           3.6  \n",
+       "833                    4.76          -3.6  \n",
+       "\n",
+       "[834 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game_results = game_results.set_index([\"home_teamID\"])\n",
+    "team_stats = team_stats.set_index([\"team_season\"])\n",
+    "game_results = game_results.assign(\n",
+    "    home_srs = team_stats[\"srs\"],\n",
+    "    home_ortg = team_stats[\"ortg\"],\n",
+    "    home_drtg = team_stats[\"drtg\"],\n",
+    "    home_true_shooting_percentage = team_stats[\"true_shooting_percentage\"],\n",
+    "    home_average_age = team_stats[\"average_age\"],\n",
+    "    home_margin_of_victory = team_stats[\"margin_of_victory\"]\n",
+    ")\n",
+    "\n",
+    "game_results = game_results.reset_index()\n",
+    "game_results = game_results.set_index([\"away_teamID\"])\n",
+    "game_results = game_results.assign(\n",
+    "    away_srs = team_stats[\"srs\"],\n",
+    "    away_ortg = team_stats[\"ortg\"],\n",
+    "    away_drtg = team_stats[\"drtg\"],\n",
+    "    away_true_shooting_percentage = team_stats[\"true_shooting_percentage\"],\n",
+    "    away_average_age = team_stats[\"average_age\"],\n",
+    "    away_margin_of_victory = team_stats[\"margin_of_victory\"]\n",
+    ")\n",
+    "game_results = game_results.reset_index()\n",
+    "\n",
+    "game_results = game_results.assign(avg_age_diff=lambda x: x.home_average_age - x.away_average_age)\n",
+    "\n",
+    "game_results = game_results.drop([\"away_team\", \"home_team\", \"year\", \"round\", \"game\", \"home_score\", \"away_score\", \"home_abbreviation\", \"away_abbreviation\", \"home_average_age\", \"away_average_age\"], axis = 1)\n",
+    "game_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6b17814f-8098-40af-b72e-9b747c3c60ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#game_results.iloc[:, 3:14]\n",
+    "#game_results[\"home_win\"].astype(int)\n",
+    "clf = LogisticRegressionCV(cv = 10, solver = \"sag\", max_iter = 10000).fit(game_results.iloc[:, 3:14], game_results[\"home_win\"].astype(int))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f734718-717c-45f9-a5df-36ba16834569",
    "metadata": {},
    "outputs": [],
    "source": []
