Implement cross validated logistic regression and predictic on potential 2022 matchups.

--- a/code/ml_model.ipynb
+++ b/code/ml_model.ipynb
@@ -10,6 +10,7 @@
     "import os\n",
     "import pandas as pd\n",
     "import sklearn as sk\n",
+    "import numpy as np\n",
     "from sklearn.linear_model import LogisticRegressionCV\n",
     "from database import engine"
    ]
@@ -80,298 +81,7 @@
    "execution_count": 6,
    "id": "474d4336-ffe8-420a-a7b7-abd5a0f9830a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>away_teamID</th>\n",
-       "      <th>home_teamID</th>\n",
-       "      <th>home_win</th>\n",
-       "      <th>home_srs</th>\n",
-       "      <th>home_ortg</th>\n",
-       "      <th>home_drtg</th>\n",
-       "      <th>home_true_shooting_percentage</th>\n",
-       "      <th>home_margin_of_victory</th>\n",
-       "      <th>away_srs</th>\n",
-       "      <th>away_ortg</th>\n",
-       "      <th>away_drtg</th>\n",
-       "      <th>away_true_shooting_percentage</th>\n",
-       "      <th>away_margin_of_victory</th>\n",
-       "      <th>avg_age_diff</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>MIL-2021</td>\n",
-       "      <td>PHX-2021</td>\n",
-       "      <td>False</td>\n",
-       "      <td>5.67</td>\n",
-       "      <td>117.2</td>\n",
-       "      <td>111.3</td>\n",
-       "      <td>0.597</td>\n",
-       "      <td>5.82</td>\n",
-       "      <td>5.57</td>\n",
-       "      <td>117.2</td>\n",
-       "      <td>111.4</td>\n",
-       "      <td>0.593</td>\n",
-       "      <td>5.89</td>\n",
-       "      <td>-1.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>MIL-2021</td>\n",
-       "      <td>PHX-2021</td>\n",
-       "      <td>False</td>\n",
-       "      <td>5.67</td>\n",
-       "      <td>117.2</td>\n",
-       "      <td>111.3</td>\n",
-       "      <td>0.597</td>\n",
-       "      <td>5.82</td>\n",
-       "      <td>5.57</td>\n",
-       "      <td>117.2</td>\n",
-       "      <td>111.4</td>\n",
-       "      <td>0.593</td>\n",
-       "      <td>5.89</td>\n",
-       "      <td>-1.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>PHX-2021</td>\n",
-       "      <td>MIL-2021</td>\n",
-       "      <td>False</td>\n",
-       "      <td>5.57</td>\n",
-       "      <td>117.2</td>\n",
-       "      <td>111.4</td>\n",
-       "      <td>0.593</td>\n",
-       "      <td>5.89</td>\n",
-       "      <td>5.67</td>\n",
-       "      <td>117.2</td>\n",
-       "      <td>111.3</td>\n",
-       "      <td>0.597</td>\n",
-       "      <td>5.82</td>\n",
-       "      <td>1.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>PHX-2021</td>\n",
-       "      <td>MIL-2021</td>\n",
-       "      <td>False</td>\n",
-       "      <td>5.57</td>\n",
-       "      <td>117.2</td>\n",
-       "      <td>111.4</td>\n",
-       "      <td>0.593</td>\n",
-       "      <td>5.89</td>\n",
-       "      <td>5.67</td>\n",
-       "      <td>117.2</td>\n",
-       "      <td>111.3</td>\n",
-       "      <td>0.597</td>\n",
-       "      <td>5.82</td>\n",
-       "      <td>1.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>MIL-2021</td>\n",
-       "      <td>PHX-2021</td>\n",
-       "      <td>True</td>\n",
-       "      <td>5.67</td>\n",
-       "      <td>117.2</td>\n",
-       "      <td>111.3</td>\n",
-       "      <td>0.597</td>\n",
-       "      <td>5.82</td>\n",
-       "      <td>5.57</td>\n",
-       "      <td>117.2</td>\n",
-       "      <td>111.4</td>\n",
-       "      <td>0.593</td>\n",
-       "      <td>5.89</td>\n",
-       "      <td>-1.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>829</th>\n",
-       "      <td>DEN-2011</td>\n",
-       "      <td>OKC-2011</td>\n",
-       "      <td>True</td>\n",
-       "      <td>3.81</td>\n",
-       "      <td>111.2</td>\n",
-       "      <td>107.2</td>\n",
-       "      <td>0.561</td>\n",
-       "      <td>3.79</td>\n",
-       "      <td>4.81</td>\n",
-       "      <td>112.3</td>\n",
-       "      <td>107.3</td>\n",
-       "      <td>0.574</td>\n",
-       "      <td>4.76</td>\n",
-       "      <td>-3.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>830</th>\n",
-       "      <td>DEN-2011</td>\n",
-       "      <td>OKC-2011</td>\n",
-       "      <td>True</td>\n",
-       "      <td>3.81</td>\n",
-       "      <td>111.2</td>\n",
-       "      <td>107.2</td>\n",
-       "      <td>0.561</td>\n",
-       "      <td>3.79</td>\n",
-       "      <td>4.81</td>\n",
-       "      <td>112.3</td>\n",
-       "      <td>107.3</td>\n",
-       "      <td>0.574</td>\n",
-       "      <td>4.76</td>\n",
-       "      <td>-3.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>831</th>\n",
-       "      <td>OKC-2011</td>\n",
-       "      <td>DEN-2011</td>\n",
-       "      <td>False</td>\n",
-       "      <td>4.81</td>\n",
-       "      <td>112.3</td>\n",
-       "      <td>107.3</td>\n",
-       "      <td>0.574</td>\n",
-       "      <td>4.76</td>\n",
-       "      <td>3.81</td>\n",
-       "      <td>111.2</td>\n",
-       "      <td>107.2</td>\n",
-       "      <td>0.561</td>\n",
-       "      <td>3.79</td>\n",
-       "      <td>3.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>832</th>\n",
-       "      <td>OKC-2011</td>\n",
-       "      <td>DEN-2011</td>\n",
-       "      <td>True</td>\n",
-       "      <td>4.81</td>\n",
-       "      <td>112.3</td>\n",
-       "      <td>107.3</td>\n",
-       "      <td>0.574</td>\n",
-       "      <td>4.76</td>\n",
-       "      <td>3.81</td>\n",
-       "      <td>111.2</td>\n",
-       "      <td>107.2</td>\n",
-       "      <td>0.561</td>\n",
-       "      <td>3.79</td>\n",
-       "      <td>3.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>833</th>\n",
-       "      <td>DEN-2011</td>\n",
-       "      <td>OKC-2011</td>\n",
-       "      <td>True</td>\n",
-       "      <td>3.81</td>\n",
-       "      <td>111.2</td>\n",
-       "      <td>107.2</td>\n",
-       "      <td>0.561</td>\n",
-       "      <td>3.79</td>\n",
-       "      <td>4.81</td>\n",
-       "      <td>112.3</td>\n",
-       "      <td>107.3</td>\n",
-       "      <td>0.574</td>\n",
-       "      <td>4.76</td>\n",
-       "      <td>-3.6</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>834 rows × 14 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    away_teamID home_teamID  home_win  home_srs  home_ortg  home_drtg  \\\n",
-       "0      MIL-2021    PHX-2021     False      5.67      117.2      111.3   \n",
-       "1      MIL-2021    PHX-2021     False      5.67      117.2      111.3   \n",
-       "2      PHX-2021    MIL-2021     False      5.57      117.2      111.4   \n",
-       "3      PHX-2021    MIL-2021     False      5.57      117.2      111.4   \n",
-       "4      MIL-2021    PHX-2021      True      5.67      117.2      111.3   \n",
-       "..          ...         ...       ...       ...        ...        ...   \n",
-       "829    DEN-2011    OKC-2011      True      3.81      111.2      107.2   \n",
-       "830    DEN-2011    OKC-2011      True      3.81      111.2      107.2   \n",
-       "831    OKC-2011    DEN-2011     False      4.81      112.3      107.3   \n",
-       "832    OKC-2011    DEN-2011      True      4.81      112.3      107.3   \n",
-       "833    DEN-2011    OKC-2011      True      3.81      111.2      107.2   \n",
-       "\n",
-       "     home_true_shooting_percentage  home_margin_of_victory  away_srs  \\\n",
-       "0                            0.597                    5.82      5.57   \n",
-       "1                            0.597                    5.82      5.57   \n",
-       "2                            0.593                    5.89      5.67   \n",
-       "3                            0.593                    5.89      5.67   \n",
-       "4                            0.597                    5.82      5.57   \n",
-       "..                             ...                     ...       ...   \n",
-       "829                          0.561                    3.79      4.81   \n",
-       "830                          0.561                    3.79      4.81   \n",
-       "831                          0.574                    4.76      3.81   \n",
-       "832                          0.574                    4.76      3.81   \n",
-       "833                          0.561                    3.79      4.81   \n",
-       "\n",
-       "     away_ortg  away_drtg  away_true_shooting_percentage  \\\n",
-       "0        117.2      111.4                          0.593   \n",
-       "1        117.2      111.4                          0.593   \n",
-       "2        117.2      111.3                          0.597   \n",
-       "3        117.2      111.3                          0.597   \n",
-       "4        117.2      111.4                          0.593   \n",
-       "..         ...        ...                            ...   \n",
-       "829      112.3      107.3                          0.574   \n",
-       "830      112.3      107.3                          0.574   \n",
-       "831      111.2      107.2                          0.561   \n",
-       "832      111.2      107.2                          0.561   \n",
-       "833      112.3      107.3                          0.574   \n",
-       "\n",
-       "     away_margin_of_victory  avg_age_diff  \n",
-       "0                      5.89          -1.5  \n",
-       "1                      5.89          -1.5  \n",
-       "2                      5.82           1.5  \n",
-       "3                      5.82           1.5  \n",
-       "4                      5.89          -1.5  \n",
-       "..                      ...           ...  \n",
-       "829                    4.76          -3.6  \n",
-       "830                    4.76          -3.6  \n",
-       "831                    3.79           3.6  \n",
-       "832                    3.79           3.6  \n",
-       "833                    4.76          -3.6  \n",
-       "\n",
-       "[834 rows x 14 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "game_results = game_results.set_index([\"home_teamID\"])\n",
     "team_stats = team_stats.set_index([\"team_season\"])\n",
@@ -398,20 +108,187 @@
     "\n",
     "game_results = game_results.assign(avg_age_diff=lambda x: x.home_average_age - x.away_average_age)\n",
     "\n",
-    "game_results = game_results.drop([\"away_team\", \"home_team\", \"year\", \"round\", \"game\", \"home_score\", \"away_score\", \"home_abbreviation\", \"away_abbreviation\", \"home_average_age\", \"away_average_age\"], axis = 1)\n",
-    "game_results"
+    "game_results = game_results.drop([\"away_team\", \"home_team\", \"year\", \"round\", \"game\", \"home_score\", \"away_score\", \"home_abbreviation\", \"away_abbreviation\", \"home_average_age\", \"away_average_age\"], axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "6b17814f-8098-40af-b72e-9b747c3c60ef",
+   "execution_count": 7,
+   "id": "a07890eb-f3c7-4432-b2f4-c9f61edf6715",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#game_results.iloc[:, 3:14]\n",
-    "#game_results[\"home_win\"].astype(int)\n",
-    "clf = LogisticRegressionCV(cv = 10, solver = \"sag\", max_iter = 10000).fit(game_results.iloc[:, 3:14], game_results[\"home_win\"].astype(int))"
+    "playoff_teams = [\"ATL-2022\", \"BOS-2022\", \"CHI-2022\", \"DAL-2022\", \n",
+    "                 \"DEN-2022\", \"GSW-2022\", \"MEM-2022\", \"MIA-2022\",\n",
+    "                 \"MIL-2022\", \"MIN-2022\", \"BKN-2022\", \"NOP-2022\",\n",
+    "                 \"PHI-2022\", \"PHX-2022\", \"TOR-2022\", \"UTA-2022\"]\n",
+    "\n",
+    "all_matchups = pd.DataFrame()\n",
+    "for team in playoff_teams:\n",
+    "    all_matchups = all_matchups.append(pd.DataFrame({'Home_TeamID': np.repeat(team, 15), 'Away_TeamID': list(filter((team).__ne__, playoff_teams))}))\n",
+    "\n",
+    "all_matchups = all_matchups.set_index([\"Home_TeamID\"])\n",
+    "all_matchups = all_matchups.assign(\n",
+    "    home_srs = team_stats[\"srs\"],\n",
+    "    home_ortg = team_stats[\"ortg\"],\n",
+    "    home_drtg = team_stats[\"drtg\"],\n",
+    "    home_true_shooting_percentage = team_stats[\"true_shooting_percentage\"],\n",
+    "    home_average_age = team_stats[\"average_age\"],\n",
+    "    home_margin_of_victory = team_stats[\"margin_of_victory\"]\n",
+    ")\n",
+    "\n",
+    "all_matchups = all_matchups.reset_index()\n",
+    "all_matchups = all_matchups.set_index([\"Away_TeamID\"])\n",
+    "all_matchups = all_matchups.assign(\n",
+    "    away_srs = team_stats[\"srs\"],\n",
+    "    away_ortg = team_stats[\"ortg\"],\n",
+    "    away_drtg = team_stats[\"drtg\"],\n",
+    "    away_true_shooting_percentage = team_stats[\"true_shooting_percentage\"],\n",
+    "    away_average_age = team_stats[\"average_age\"],\n",
+    "    away_margin_of_victory = team_stats[\"margin_of_victory\"]\n",
+    ")\n",
+    "all_matchups = all_matchups.reset_index()\n",
+    "\n",
+    "all_matchups = all_matchups.assign(avg_age_diff=lambda x: x.home_average_age - x.away_average_age)\n",
+    "\n",
+    "all_matchups = all_matchups.drop([\"home_average_age\", \"away_average_age\"], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6b17814f-8098-40af-b72e-9b747c3c60ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Home_TeamID</th>\n",
+       "      <th>Away_TeamID</th>\n",
+       "      <th>Home_win_prob</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ATL-2022</td>\n",
+       "      <td>BOS-2022</td>\n",
+       "      <td>0.434149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ATL-2022</td>\n",
+       "      <td>CHI-2022</td>\n",
+       "      <td>0.682350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ATL-2022</td>\n",
+       "      <td>DAL-2022</td>\n",
+       "      <td>0.575720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ATL-2022</td>\n",
+       "      <td>DEN-2022</td>\n",
+       "      <td>0.575352</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ATL-2022</td>\n",
+       "      <td>GSW-2022</td>\n",
+       "      <td>0.460558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>235</th>\n",
+       "      <td>UTA-2022</td>\n",
+       "      <td>BKN-2022</td>\n",
+       "      <td>0.746608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>236</th>\n",
+       "      <td>UTA-2022</td>\n",
+       "      <td>NOP-2022</td>\n",
+       "      <td>0.830441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>237</th>\n",
+       "      <td>UTA-2022</td>\n",
+       "      <td>PHI-2022</td>\n",
+       "      <td>0.730199</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>238</th>\n",
+       "      <td>UTA-2022</td>\n",
+       "      <td>PHX-2022</td>\n",
+       "      <td>0.572208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>UTA-2022</td>\n",
+       "      <td>TOR-2022</td>\n",
+       "      <td>0.763516</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>240 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Home_TeamID Away_TeamID  Home_win_prob\n",
+       "0      ATL-2022    BOS-2022       0.434149\n",
+       "1      ATL-2022    CHI-2022       0.682350\n",
+       "2      ATL-2022    DAL-2022       0.575720\n",
+       "3      ATL-2022    DEN-2022       0.575352\n",
+       "4      ATL-2022    GSW-2022       0.460558\n",
+       "..          ...         ...            ...\n",
+       "235    UTA-2022    BKN-2022       0.746608\n",
+       "236    UTA-2022    NOP-2022       0.830441\n",
+       "237    UTA-2022    PHI-2022       0.730199\n",
+       "238    UTA-2022    PHX-2022       0.572208\n",
+       "239    UTA-2022    TOR-2022       0.763516\n",
+       "\n",
+       "[240 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf = LogisticRegressionCV(cv = 10, solver = \"liblinear\", max_iter = 10000).fit(game_results.iloc[:, 3:14], game_results[\"home_win\"])\n",
+    "\n",
+    "all_2022_matchups = all_matchups.iloc[:, 0:2]\n",
+    "all_2022_matchups = all_2022_matchups.reindex(columns = [\"Home_TeamID\", \"Away_TeamID\"])\n",
+    "all_2022_matchups[\"Home_win_prob\"] = clf.predict_proba(all_matchups.iloc[:, 2:13])[:,1]\n",
+    "all_2022_matchups\n",
+    "#pd.DataFrame([all_matchups.iloc[:, 1], all_matchups.iloc[:, 0]])\n",
+    "#pd.DataFrame(all_matchups.iloc[:, 0:1], clf.predict_proba(all_matchups.iloc[:, 2:13])[:,1])"
    ]
   },
   {
