Output home team win percentages for all potential 2022 matchups.

--- a/code/ml_model.ipynb
+++ b/code/ml_model.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "6b17814f-8098-40af-b72e-9b747c3c60ef",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
        "[240 rows x 3 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,12 +283,9 @@
    "source": [
     "clf = LogisticRegressionCV(cv = 10, solver = \"liblinear\", max_iter = 10000).fit(game_results.iloc[:, 3:14], game_results[\"home_win\"])\n",
     "\n",
-    "all_2022_matchups = all_matchups.iloc[:, 0:2]\n",
-    "all_2022_matchups = all_2022_matchups.reindex(columns = [\"Home_TeamID\", \"Away_TeamID\"])\n",
+    "all_2022_matchups = all_matchups.iloc[:, 0:2].reindex(columns = [\"Home_TeamID\", \"Away_TeamID\"])\n",
     "all_2022_matchups[\"Home_win_prob\"] = clf.predict_proba(all_matchups.iloc[:, 2:13])[:,1]\n",
-    "all_2022_matchups\n",
-    "#pd.DataFrame([all_matchups.iloc[:, 1], all_matchups.iloc[:, 0]])\n",
-    "#pd.DataFrame(all_matchups.iloc[:, 0:1], clf.predict_proba(all_matchups.iloc[:, 2:13])[:,1])"
+    "all_2022_matchups"
    ]
   },
   {
@@ -297,7 +294,9 @@
    "id": "6f734718-717c-45f9-a5df-36ba16834569",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "all_2022_matchups.to_csv(os.path.join(\"..\"data\", \"clean\", \"all_2022_matchups.csv\"), index = False)"
+   ]
   }
  ],
  "metadata": {
