--- a/code/ml_model.ipynb
+++ b/code/ml_model.ipynb
@@ -156,146 +156,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "6b17814f-8098-40af-b72e-9b747c3c60ef",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Home_TeamID</th>\n",
-       "      <th>Away_TeamID</th>\n",
-       "      <th>Home_win_prob</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ATL-2022</td>\n",
-       "      <td>BOS-2022</td>\n",
-       "      <td>0.434149</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ATL-2022</td>\n",
-       "      <td>CHI-2022</td>\n",
-       "      <td>0.682350</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ATL-2022</td>\n",
-       "      <td>DAL-2022</td>\n",
-       "      <td>0.575720</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ATL-2022</td>\n",
-       "      <td>DEN-2022</td>\n",
-       "      <td>0.575352</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ATL-2022</td>\n",
-       "      <td>GSW-2022</td>\n",
-       "      <td>0.460558</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>235</th>\n",
-       "      <td>UTA-2022</td>\n",
-       "      <td>BKN-2022</td>\n",
-       "      <td>0.746608</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>236</th>\n",
-       "      <td>UTA-2022</td>\n",
-       "      <td>NOP-2022</td>\n",
-       "      <td>0.830441</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>237</th>\n",
-       "      <td>UTA-2022</td>\n",
-       "      <td>PHI-2022</td>\n",
-       "      <td>0.730199</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>238</th>\n",
-       "      <td>UTA-2022</td>\n",
-       "      <td>PHX-2022</td>\n",
-       "      <td>0.572208</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>239</th>\n",
-       "      <td>UTA-2022</td>\n",
-       "      <td>TOR-2022</td>\n",
-       "      <td>0.763516</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>240 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Home_TeamID Away_TeamID  Home_win_prob\n",
-       "0      ATL-2022    BOS-2022       0.434149\n",
-       "1      ATL-2022    CHI-2022       0.682350\n",
-       "2      ATL-2022    DAL-2022       0.575720\n",
-       "3      ATL-2022    DEN-2022       0.575352\n",
-       "4      ATL-2022    GSW-2022       0.460558\n",
-       "..          ...         ...            ...\n",
-       "235    UTA-2022    BKN-2022       0.746608\n",
-       "236    UTA-2022    NOP-2022       0.830441\n",
-       "237    UTA-2022    PHI-2022       0.730199\n",
-       "238    UTA-2022    PHX-2022       0.572208\n",
-       "239    UTA-2022    TOR-2022       0.763516\n",
-       "\n",
-       "[240 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "clf = LogisticRegressionCV(cv = 10, solver = \"liblinear\", max_iter = 10000).fit(game_results.iloc[:, 3:14], game_results[\"home_win\"])\n",
+    "clf = LogisticRegressionCV(cv = 10, solver = \"liblinear\", max_iter = 1000, penalty = 'l1', scoring = \"roc_auc\").fit(game_results.iloc[:, 3:14], game_results[\"home_win\"])\n",
     "\n",
     "all_2022_matchups = all_matchups.iloc[:, 0:2].reindex(columns = [\"Home_TeamID\", \"Away_TeamID\"])\n",
-    "all_2022_matchups[\"Home_win_prob\"] = clf.predict_proba(all_matchups.iloc[:, 2:13])[:,1]\n",
-    "all_2022_matchups"
+    "all_2022_matchups[\"Home_win_prob\"] = clf.predict_proba(all_matchups.iloc[:, 2:13])[:,1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6f734718-717c-45f9-a5df-36ba16834569",
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_2022_matchups.to_csv(os.path.join(\"..\"data\", \"clean\", \"all_2022_matchups.csv\"), index = False)"
+    "all_2022_matchups.to_csv(os.path.join(\"..\", \"artifacts\", \"all_2022_matchups.csv\"), index = False)"
    ]
   }
  ],
